[package]
name = "os"
version = "0.1.0"
authors = ["wyw"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = {path = "src/riscv"}
buddy_system_allocator = {path = "src/buddy_system_allocator"}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# panic 时直接终⽌，因为我们没有实现堆栈展开的功能
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
